// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Should render an icon 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    icon="twitter"
    size="medium"
    type="primary"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Icon
          classes="ph2"
          size="lg"
          type="twitter"
        />,
        "Button Text",
      ],
      "className": "p-2 rounded py-2 bg-blue text-white",
      "onClick": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "classes": "ph2",
          "size": "lg",
          "type": "twitter",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "Button Text",
    ],
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Icon
            classes="ph2"
            size="lg"
            type="twitter"
          />,
          "Button Text",
        ],
        "className": "p-2 rounded py-2 bg-blue text-white",
        "onClick": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "classes": "ph2",
            "size": "lg",
            "type": "twitter",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "Button Text",
      ],
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button Should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    size="medium"
    type="primary"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        "Button Text",
      ],
      "className": "p-2 rounded py-2 bg-blue text-white",
      "onClick": undefined,
    },
    "ref": null,
    "rendered": Array [
      undefined,
      "Button Text",
    ],
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          "Button Text",
        ],
        "className": "p-2 rounded py-2 bg-blue text-white",
        "onClick": undefined,
      },
      "ref": null,
      "rendered": Array [
        undefined,
        "Button Text",
      ],
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
